# hornet-nest-locator

./: .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  README_FR.md  TEST_AND_BUILD_REPORT.md  build_exe.sh  example.py  gui.py  hornet_report_20251220_013807.txt  launch_gui.sh  main.py  pyproject.toml  requirements.txt  vespa_finder.spec
.claude/: settings.local.json
.github/workflows/: build.yml  build_windows.yml  ci.yml
assets/: README.md
docs/: BUILD_PROCESS.md  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  GUI_CODE_REVIEW.md  GUI_GUIDE.md  HORNET_SPEED_RESEARCH.md  LANGUAGE_SWITCHING.md  MOBILE_APP_PLAN.md  ROADMAP.md  article-web-methode.txt
src/vespa_finder/: __init__.py  __version__.py  calculator.py  cli.py  geo_utils.py  gui_entry.py  models.py  simple_map.py  translations.py  visualizer.py  wildlife_api.py
tests/: __init__.py  test_calculator.py  test_geo_utils.py  test_models.py
