[project]
name = "vespa-finder"
version = "0.3.0"
description = "Locate Asian hornet (Vespa velutina) nests by tracking flight patterns to protect bees"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.15.0",
    "pytest>=9.0.1",
    "requests>=2.32.0",
    "ruff>=0.14.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
vespa-finder = "vespa_finder.cli:main"
vespa-finder-gui = "vespa_finder.gui_entry:main"

[project.gui-scripts]
vespafinder = "vespa_finder.gui_entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vespa_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
# Enable comprehensive linting rules
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PLC",    # pylint-convention
    "PLE",    # pylint-error
    "PLW",    # pylint-warning
]

ignore = [
    "E501",   # Line length (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "C901",   # Function is too complex
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments
]

[tool.ruff.lint.isort]
known-first-party = ["vespa_finder"]
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "PT", "S101"]  # Allow prints and pytest-style in tests
"src/vespa_finder/gui_entry.py" = ["F401"]  # Allow unused imports in GUI entry

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pyinstaller>=6.0.0",
]

# PyInstaller settings
[tool.pyinstaller]
# These are reference settings - actual config is in vespa_finder.spec
